--- a/.github/workflows/build_publish_on_release.yml
+++ b/.github/workflows/build_publish_on_release.yml
@@ -28,6 +28,6 @@ jobs:
         rm -rf dist/*
         python setup.py sdist bdist_wheel
     - name: Publish distribution to PyPI
-      uses: pypa/gh-action-pypi-publish@master
+      uses: pypa/gh-action-pypi-publish@release/v1
       with:
         password: ${{ secrets.pypi_password }}
